feat: Replace markdown issue templates with YAML format for Arazzo spec generation and OpenAPI import and add issue commenting

--- a/.github/workflows/auto-arazzo.yaml
+++ b/.github/workflows/auto-arazzo.yaml
@@ -6,12 +6,12 @@ on:
 
 jobs:
   generate-arazzo:
-    if: contains(github.event.issue.body, 'openapi_url:')
+    if: contains(github.event.issue.labels.*.name, 'arazzo-generation')
     runs-on: ubuntu-latest
     permissions:
       contents: write
       pull-requests: write
-      issues: read
+      issues: write
 
     steps:
       - name: Check out the repository
@@ -22,7 +22,11 @@ jobs:
         run: |
           echo "Parsing OpenAPI URL and details from issue..."
           BODY="${{ github.event.issue.body }}"
-          URL=$(echo "$BODY" | grep -oP '(?<=openapi_url:).*' | head -n 1 | xargs)
+          # Try YAML form format first, then fallback to markdown format
+          URL=$(echo "$BODY" | grep -A 1 "### OpenAPI Specification URL" | tail -n 1 | xargs)
+          if [ -z "$URL" ] || [ "$URL" = "_No response_" ]; then
+            URL=$(echo "$BODY" | grep -oP '(?<=openapi_url:).*' | head -n 1 | xargs)
+          fi
           # Attempt to extract vendor and api_name from URL structure
           # Example: .../apis/openapi/vendor.com/api_name/version/openapi.json
           VENDOR_NAME=$(echo "$URL" | grep -oP '(?<=apis/openapi/)[^/]+' | head -n 1)
@@ -31,8 +35,11 @@ jobs:
           API_VERSION=$(echo "$URL" | grep -oP '[^/]+(?=/openapi\.json)' | head -n 1)
 
           # Extract Workflow Descriptions section as a JSON array
-          # Looks for the specific heading from the issue template
-          WORKFLOW_DESCRIPTIONS=$(echo "$BODY" | awk '/^### Workflow Descriptions \(Optional\)/{flag=1;next}/^## |^### /{if(flag)flag=0}flag' | grep -E '^[-*] ' | sed -E 's/^[-*] *//' | jq -R . | jq -sc .)
+          # Try YAML form format first, then fallback to markdown format
+          WORKFLOW_DESCRIPTIONS=$(echo "$BODY" | awk '/^### Request Workflow Descriptions/{flag=1;next}/^## |^### /{if(flag)flag=0}flag' | grep -E '^[-*] ' | sed -E 's/^[-*] *//' | jq -R . | jq -sc .)
+          if [ -z "$WORKFLOW_DESCRIPTIONS" ] || [ "$WORKFLOW_DESCRIPTIONS" = "[]" ]; then
+            WORKFLOW_DESCRIPTIONS=$(echo "$BODY" | awk '/^### Workflow Descriptions \(Optional\)/{flag=1;next}/^## |^### /{if(flag)flag=0}flag' | grep -E '^[-*] ' | sed -E 's/^[-*] *//' | jq -R . | jq -sc .)
+          fi
 
           if [ -z "$URL" ]; then
             echo "::error::Could not extract openapi_url from issue body."
@@ -76,14 +83,11 @@ jobs:
           fi
           RESPONSE=$(jq -n --arg url "${{ steps.extract_info.outputs.openapi_url }}" \
                         --arg format "json" \
-                        --argjson validate true \
-                        --argjson enable_llm true \
-                        --argjson enable_rules false \
+                        --argjson validate_spec true \
                         --argjson direct_llm false \
-                        --arg llm_provider "gemini" \
                         --rawfile wf_desc <(echo "$WF_DESCRIPTIONS") \
-                        '{url: $url, format: $format, validate: $validate, enable_llm: $enable_llm, enable_rules: $enable_rules, direct_llm: $direct_llm, llm_provider: $llm_provider, workflow_descriptions: ($wf_desc | fromjson? // null)}' | \
-            curl -s -f -X POST https://arazzo-runner.main.us-east-1.jenticprod.net/generate \
+                        '{url: $url, format: $format, validate_spec: $validate_spec, direct_llm: $direct_llm, workflow_descriptions: ($wf_desc | fromjson? // null)}' | \
+            curl -v --show-error -X POST https://arazzo-runner.main.us-east-1.jenticprod.net/generate \
               -H "Content-Type: application/json" \
               -d @-)
 
@@ -106,12 +110,13 @@ jobs:
 
           # Attempt to parse and save the spec file
           if ! echo "$RESPONSE" | jq -e '.arazzo_spec' > "$SPEC_FILE"; then
-             echo "::error::API call failed or API response did not contain expected '.arazzo_spec' field."
-             echo "Response was:"
-             echo "$RESPONSE"
-             exit 1
+            echo "::error::API call failed or API response did not contain expected '.arazzo_spec' field."
+            echo "Response was:"
+            echo "$RESPONSE"
+            echo "api_failed=true" >> $GITHUB_OUTPUT
+            echo "error_response=$RESPONSE" >> $GITHUB_OUTPUT
+            exit 1
           fi
-          echo "API call successful, $SPEC_FILE created in workspace."
 
           # Extract fallback status/message if custom workflow descriptions failed and caused regeneration
           FALLBACK_USED=$(echo "$RESPONSE" | jq -r '.fallback_used // false')
@@ -160,7 +165,47 @@ jobs:
             ${{ steps.call_api_and_create_file.outputs.fallback_note }}
 
             Closes #${{ github.event.issue.number }}
+
           branch: feat/arazzo-${{ steps.extract_info.outputs.vendor_name }}-${{ steps.extract_info.outputs.api_name }}-${{ steps.extract_info.outputs.api_version }}-${{ github.event.issue.number }}
           base: main # Or your target branch in jentic-arazzo-generator
           # Optional: Add labels, assignees etc.
           # labels: automated-pr, arazzo-spec
+
+      - name: Comment on Issue if API Failed
+        if: failure() && steps.call_api_and_create_file.outputs.api_failed == 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const errorResponse = `${{ steps.call_api_and_create_file.outputs.error_response }}`;
+            let errorMessage = "❌ **Failed to generate Arazzo specification**\n\n";
+            
+            try {
+              const response = JSON.parse(errorResponse);
+              if (response.error) {
+                errorMessage += `**Error:** ${response.error}\n\n`;
+              }
+              if (response.message) {
+                errorMessage += `**Details:** ${response.message}\n\n`;
+              }
+              if (response.validation_errors && response.validation_errors.length > 0) {
+                errorMessage += `**Validation Errors:**\n`;
+                response.validation_errors.forEach(error => {
+                  errorMessage += `- ${error}\n`;
+                });
+                errorMessage += "\n";
+              }
+            } catch (e) {
+              errorMessage += `**Raw Response:** \`\`\`\n${errorResponse}\n\`\`\`\n\n`;
+            }
+            
+            errorMessage += "There was an error generating the Arazzo spec from the provided OpenAPI specification URL.\n\n";
+            errorMessage += "If you believe this is a bug with the Arazzo generator or need additional support, please contact the development team at Jentic Community Discord (https://discord.gg/yrxmDZWMqB).\n\n";
+            errorMessage += "Alternatively create a new issue reporting the bug (https://github.com/jentic/jentic-public-apis/issues/new?template=BLANK_ISSUE).";
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: errorMessage
+            });
