--- a/.github/workflows/import-openapi-to-oak.yaml
+++ b/.github/workflows/import-openapi-to-oak.yaml
@@ -6,13 +6,13 @@ on:
 
 jobs:
   generate-repo-structure:
-    # Only run if the issue body contains the trigger string
-    if: contains(github.event.issue.body, 'import_oas_url:')
+    # Only run if the issue has the openapi-import label
+    if: contains(github.event.issue.labels.*.name, 'openapi-import')
     runs-on: ubuntu-latest
     permissions:
       contents: write        # To push the new branch and commit files
       pull-requests: write   # To create the pull request
-      issues: read           # To read the issue body
+      issues: write          # To comment on the issue 
 
     steps:
       - name: Check out the repository
@@ -27,19 +27,29 @@ jobs:
           BODY="${{ github.event.issue.body }}"
           BODY=$(echo "$BODY" | tr -d '\r')
 
-          # Extract URL (Required)
-          URL=$(echo "$BODY" | grep -oP '(?<=import_oas_url:).*' | head -n 1 | xargs)
+          # Extract URL - try YAML form format first, then fallback to markdown
+          URL=$(echo "$BODY" | grep -A 1 "### OpenAPI Specification URL" | tail -n 1 | xargs)
+          if [ -z "$URL" ] || [ "$URL" = "_No response_" ]; then
+            URL=$(echo "$BODY" | grep -oP '(?<=import_oas_url:).*' | head -n 1 | xargs)
+          fi
           echo "URL after grep/xargs: $URL"
           if [ -z "$URL" ]; then
-            echo "::error::Could not extract required 'import_oas_url:' field from issue body."
+            echo "::error::Could not extract required OpenAPI URL from issue body."
+            echo "extract_failed=true" >> $GITHUB_OUTPUT
+            echo "error_message=Could not extract required OpenAPI URL from issue body. Please ensure your issue is properly filled out." >> $GITHUB_OUTPUT
             exit 1
           fi
 
-          # Extract Vendor Name (Required)
-          VENDOR_NAME=$(echo "$BODY" | grep -oP '(?<=vendor_name:).*' | head -n 1 | xargs)
+          # Extract Vendor Name - try YAML form format first, then fallback to markdown
+          VENDOR_NAME=$(echo "$BODY" | grep -A 1 "### Vendor Name (Required)" | tail -n 1 | xargs)
+          if [ -z "$VENDOR_NAME" ] || [ "$VENDOR_NAME" = "_No response_" ]; then
+            VENDOR_NAME=$(echo "$BODY" | grep -oP '(?<=vendor_name:).*' | head -n 1 | xargs)
+          fi
           echo "Vendor Name after grep/xargs: $VENDOR_NAME"
           if [ -z "$VENDOR_NAME" ]; then
-            echo "::error::Could not extract required 'vendor_name:' field from issue body."
+            echo "::error::Could not extract required vendor name from issue body."
+            echo "extract_failed=true" >> $GITHUB_OUTPUT
+            echo "error_message=Could not extract required vendor name from issue body. Please ensure your issue is properly filled out." >> $GITHUB_OUTPUT
             exit 1
           fi
 
@@ -82,10 +92,15 @@ jobs:
 
           if [ "$STATUS_CODE" -ne 200 ]; then
               echo "::error::Repotools API call failed with status code $STATUS_CODE."
+              echo "api_failed=true" >> $GITHUB_OUTPUT
 
               if [ -s "$OUTPUT_ZIP" ]; then
                   echo "Response details (if any):"
-                  cat "$OUTPUT_ZIP" # Output might contain error details from the API
+                  ERROR_RESPONSE=$(cat "$OUTPUT_ZIP")
+                  echo "$ERROR_RESPONSE"
+                  echo "error_response=$ERROR_RESPONSE" >> $GITHUB_OUTPUT
+              else
+                  echo "error_response=Repotools API call failed with HTTP status code $STATUS_CODE. No additional error details available." >> $GITHUB_OUTPUT
               fi
               exit 1
           else
@@ -99,6 +114,8 @@ jobs:
               if [ ! -s "$OUTPUT_ZIP" ] || [ $(stat -c%s "$OUTPUT_ZIP") -lt 100 ]; then # Check if file exists and is > 100 bytes
                   echo "::error::Downloaded ZIP file seems empty or too small."
                   ls -l "$OUTPUT_ZIP"
+                  echo "api_failed=true" >> $GITHUB_OUTPUT
+                  echo "error_response=Downloaded ZIP file from Repotools API is empty or too small. The OpenAPI URL may be invalid or inaccessible." >> $GITHUB_OUTPUT
                   exit 1
               fi
               echo "ZIP file size: $(stat -c%s "$OUTPUT_ZIP") bytes."
@@ -309,4 +326,47 @@ jobs:
               repo: context.repo.repo,
               issue_number: ${{ steps.create_pr_step.outputs.pull-request-number }},
               body: commentBody
+            });
+
+      - name: Comment on Issue if Import Failed
+        if: failure() && (steps.extract_info.outputs.extract_failed == 'true' || steps.call_repotools.outputs.api_failed == 'true')
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            let errorMessage = "❌ **Failed to import OpenAPI specification**\n\n";
+            
+            // Check which step failed and provide appropriate error message
+            if ('${{ steps.extract_info.outputs.extract_failed }}' === 'true') {
+              errorMessage += `**Error:** ${{ steps.extract_info.outputs.error_message }}\n\n`;
+              errorMessage += "Please check your issue format and ensure it contains the required fields:\n";
+              errorMessage += "- \`import_oas_url: <your-openapi-url>\`\n";
+              errorMessage += "- \`vendor_name: <your-vendor-name>\`\n\n";
+            } else if ('${{ steps.call_repotools.outputs.api_failed }}' === 'true') {
+              const errorResponse = `${{ steps.call_repotools.outputs.error_response }}`;
+              errorMessage += `**Error:** Import service failed\n\n`;
+              
+              try {
+                const response = JSON.parse(errorResponse);
+                if (response.error) {
+                  errorMessage += `**Details:** ${response.error}\n\n`;
+                }
+                if (response.message) {
+                  errorMessage += `**Message:** ${response.message}\n\n`;
+                }
+              } catch (e) {
+                errorMessage += `**Details:** ${errorResponse}\n\n`;
+              }
+              
+              errorMessage += "Please check that your OpenAPI URL is accessible and contains a valid OpenAPI specification.\n\n";
+            }
+            
+            errorMessage += "If you believe this is a bug with the import service or need additional support, please contact the development team at Jentic Community Discord (https://discord.gg/yrxmDZWMqB).\n\n";
+            errorMessage += "Alternatively create a new issue reporting the bug (https://github.com/jentic/jentic-public-apis/issues/new?template=BLANK_ISSUE).";
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: errorMessage
             });
